# guvenli-nokta-ai

./: README.md
ai/: .gitignore  README.md  analyse.py  pyproject.toml
assets/screenshots/: .gitkeep
backend/: server.js
docs/: daily-scrum-notes.md  product-backlog.md  project-flow.md  sprint-1.md  sprint-2-daily-scrum.md  sprint2-planning.md
docs/sprint-1/: README.md  backlog-dagitim-mantigi.md  daily-scrum-notlari.md  sprint-board-updates.md  sprint-retrospective.md  sprint-review.md  urun-durumu.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/pages/: Checklist.tsx  EmergencyPlan.tsx  Form.tsx  Home.tsx  Result.tsx
