[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=2.12.1",
    "langchain>=1.3.14",
    "langchain-google-genai>=4.2.7",
    "openai>=2.46.0",
    "pillow>=12.3.0",
    "rich>=15.0.0",
]
